--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,15 +11,15 @@ aside{
     text-align: center
 }
 aside img{
-    width: : 200px;
+    width: 200px;
     height: auto;
 }
 main img{
     width: 150px;
     height: auto;
 }
-p{padding: 0;}
-footer{
+p { padding: 0;}
+footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
