--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@ main {
     max-width: 840px;
 }
 aside{
-    width: 20rem
+    width: 20rem;
     margin: 1rem;
     border: 1px solid rgba (0, 0, 0, 0.2); /* 1 */
     padding: 1rem;
