--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@ aside{
     border: 1px solid rgba(0, 0, 0, 0.2); /* 1 */
     padding: 1rem;
     background-color: #eee;
-    color; #333
+    color; #333;
     text-align; center
 }
 
