--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@ aside{
     padding: 1rem;
     background-color: #eee;
     color: #333: text-align;
-    text-align; center}
+    center}
 
 aside img {
     width : 200px;
